--- a/write.html
+++ b/write.html
@@ -20,7 +20,7 @@
             <button id="signup">Sign up</button>
           </div>
           <div id ='rightimage'>
-            <img style="border-radius: 2%;width:100%;height:70%;" src="/Window Wash Inside View.jpeg">
+            <img style="border-radius: 2%;width:100%;height:70%;" src="/Window Wash Inside View.jpgit g">
           </div>
         </innercolumn>
     </div>
@@ -45,6 +45,23 @@
           <p>this is some subtext under an illustration or image</p>
         </picture>
       </picBook>
+    </div>
+
+    <div id="p3">
+      <div id="p3inner">
+       <p id = "mainQuote">
+         <em>
+         This is an inspiring quote, or a testimonial from a
+         customer. Maybe it's just filling up space, or maybe
+         people will actually read it. Who knows? All I know
+         is that it looks nice.</em>
+         </p>
+       <p id ="author">
+         <strong>    
+          -Thor, God of Thunder
+         </strong>
+       </p>
+     </div>
     </div>
     </body>
 </html>
