Finished section 4 and footer, looked over everything. FINALLY FINISHEDgit statusgit status

--- a/write.html
+++ b/write.html
@@ -17,10 +17,10 @@
           <div id = "lefttext">
             <p id="awesome" style="margin-bottom:0px;"> Book a Window Washing</p>
             <p id="awedescript"> We'll respond in a fast manner, clean your windows quickly and effeciantly, and leave you extremely satisified! What are you waiting for?! <strong>ClICK THE BUTTON</strong></p>
-            <button id="signup">Sign up</button>
+            <button class="signup">Sign up</button>
           </div>
           <div id ='rightimage'>
-            <img style="border-radius: 2%;width:100%;height:70%;" src="/Window Wash Inside View.jpgit g">
+            <img style="border-radius: 2%;width:100%;height:70%;" src="/Window Wash Inside View.jpeg ">
           </div>
         </innercolumn>
     </div>
@@ -63,5 +63,21 @@
        </p>
      </div>
     </div>
+    
+    <div id="p4">
+      <div id="cta">
+        <section >
+          <h3 class="ctat">Call to action! It's time!</h3>
+          <p class="ctat">
+            Sign up for our product by clicking 
+            that button right over there!
+          </p>
+        </section>
+        <button id =ctas class="signup"> Sign Up</button>
+      </div>
+    </div>
+    <footer>
+      <p>Copyright © WindowWashing&Co 2024</p>
+    </footer>
     </body>
 </html>
